@@ -1,4 +1,4 @@
-#! /bin/sh
+#!@R_SHELL@
 #
 # ${R_HOME}/bin/REMOVE for removing add-on packages
 
